[package]
name = "anon_iter"
version = "0.1.0"
description = "Return different Iterator types from function returning `-> impl Iterator`"
edition = "2018"
rust-version = "1.50"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/anon-iter"
keywords = ["enum"]
categories = ["Data structures", "Rust patterns"]
license = "MIT OR Apache-2.0"

[dependencies]
